# pygobject-enum-array-return

./: meson.build  test.c  test.h  test.py
